# GraffitiXR

./: .aiexclude  .azignore  .gitignore  AGENTS.md  ANALYSIS.md  ARCHITECTURAL_ANALYSIS.md  BACKLOG.md  BLUEPRINT.md  CLAUDE.md  GEMINI.md  ImageUtils.kt.full  LICENSE  PLAN.md  README-de.md  README-es.md  README-tl.md  README.md  README_fr.md  README_ja.md  README_ru.md  README_sv.md  README_zh.md  REFACTORING_STRATEGY.md  SECURITY-es.md  SECURITY-hu.md  SECURITY-tl.md  SECURITY.md  SECURITY_fr.md  SECURITY_nl.md  SECURITY_sv.md  SECURITY_zh.md  TESTING_PROGRESS.md  TODO.md  ai_debug_session.md  backup.ps1  build.gradle.kts  build_debug.txt  build_extension.bat  build_output.txt  build_output_app.txt  (+48 more)
app/: CMakeLists.txt  build.gradle.kts  google-services.json  google-services.json.template  proguard-rules.pro
app/libs/: vuforia.aar
app/src.main/java/com/hereliesaz/graffitixr/: MainViewModel.kt
app/src.main/java/com/hereliesaz/graffitixr/composables/: VuforiaRenderer.kt
app/src/main/: AndroidManifest.xml
app/src/main/assets/marketplace/: cool-noir-1.0.0.azp  warm-sunset-1.0.0.azp
app/src/main/assets/shaders/: fragment_shader.glsl  mural_object.frag  mural_object.vert  plane.frag  plane.vert  point_cloud.frag  point_cloud.vert  vertex_shader.glsl
app/src/main/cpp/: CMakeLists.txt  GraffitiJNI.cpp  MobileGS.cpp
app/src/main/cpp/include/: MobileGS.h  ORB_SLAM3_Mock.h
app/src/main/java/com/example/muraloverlay/: MainActivity.kt
app/src/main/java/com/hereliesaz/MuralOverlay/: ARView.kt  MainActivity.kt  MuralRenderer.kt  MuralViewModel.kt
app/src/main/java/com/hereliesaz/MuralOverlay/rendering/: BackgroundRenderer.kt  Framebuffer.kt  GpuBuffer.kt  IndexBuffer.kt  Mesh.kt  ObjectRenderer.kt  Shader.kt  Texture.kt  Utils.kt  VertexBuffer.kt
app/src/main/java/com/hereliesaz/graffitixr/: ARCameraScreen.kt  ARCoreManager.kt  ARCoreRenderer.kt  ARScreen.kt  ARView.kt  ActionDispatcher.kt  AdjustmentSliderPanel.kt  ApkInstallReceiver.kt  AppMode.kt  AppNavRail.kt  AppScreens.kt  ArModeScreen.kt  ArRenderer.kt  ArState.kt  ArView.kt  AzGraph.kt  Backgrounds.kt  Camera.kt  CameraPreview.kt  CameraView.kt  CaptureEnums.kt  CrashActivity.kt  CrashHandler.kt  DesignScreen.kt  EditorMode.kt  GraffitiApplication.kt  GraffitiNavRail.kt  GraffitiTutorials.kt  GraffitiViewModel.kt  GraffitiViewModelFactory.kt  GuidanceDefinitions.kt  HelpItemsBuilder.kt  HelpViewModel.kt  ImageProcessor.kt  ImageSettingsState.kt  ImageTraceScreen.kt  LayerId.kt  MainActivity.kt  MainActivity.kt.txt  MainScreen.kt  (+34 more)
app/src/main/java/com/hereliesaz/graffitixr/composables/: AdjustmentsControls.kt  AdjustmentsPanel.kt  ArModeScreen.kt  AzNavHost.kt  ConstraintBox.kt  CustomHelpOverlay.kt  CustomNavRail.kt  DrawingCanvas.kt  EditorUi.kt  GestureBox.kt  GestureFeedback.kt  GhostScreen.kt  GraffitiNavRail.kt  HelpOverlay.kt  HelpScreen.kt  ImageTraceScreen.kt  Knob.kt  MainScreen.kt  MockupScreen.kt  NonArModeScreen.kt  OnboardingScreen.kt  OverlayScreen.kt  PageIndicator.kt  ProgressIndicator.kt  ProjectLibraryScreen.kt  RefinementScreen.kt  RotationAxisFeedback.kt  SettingsScreen.kt  StaticImageEditor.kt  TargetCreationOverlay.kt  TargetRefinementScreen.kt  TitleOverlay.kt  TraceScreen.kt  UnwarpScreen.kt  VuforiaCameraScreen.kt  VuforiaRenderer.kt
app/src/main/java/com/hereliesaz/graffitixr/data/: BlendModeSerializer.kt  Events.kt  Fingerprint.kt  FingerprintSerializer.kt  GithubRelease.kt  MatSerializer.kt  Models.kt  OffsetSerializer.kt  OverlayLayer.kt  ProjectData.kt  RefinementPath.kt  RefinementPathSerializer.kt  Serializers.kt
app/src/main/java/com/hereliesaz/graffitixr/di/: CoopModule.kt
app/src/main/java/com/hereliesaz/graffitixr/dialogs/: AdjustmentSliderDialog.kt  ColorBalanceDialog.kt  OnboardingDialog.kt  SaveProjectDialog.kt
app/src/main/java/com/hereliesaz/graffitixr/graphics/: ArFeaturePattern.kt  ArRenderer.kt  BackgroundRenderer.kt  DisplayRotationHelper.kt  HomographyHelper.kt  ImageConverter.kt  Quaternion.kt  (+8 more)
app/src/main/java/com/vuforia/: VuforiaJNI.kt
app/src/main/res/layout/: activity_mapping.xml
app/src/main/res/values/: ic_launcher_background.xml  strings.xml  themes.xml
app/src/main/res/values-de/: strings.xml
app/src/main/res/values-es/: strings.xml
app/src/main/res/values-fr/: strings.xml
app/src/main/res/values-hu/: strings.xml
app/src/main/res/values-it/: strings.xml
app/src/main/res/values-ja/: strings.xml
app/src/main/res/values-nl/: strings.xml
app/src/main/res/values-no/: strings.xml
app/src/main/res/values-pt/: strings.xml
app/src/main/res/values-ru/: strings.xml
app/src/main/res/values-sv/: strings.xml
app/src/main/res/values-tl/: strings.xml
app/src/main/res/values-zh-rCN/: strings.xml
app/src/main/res/values-zh-rHK/: strings.xml
app/src/main/res/xml/: backup_rules.xml  data_extraction_rules.xml  network_security_config.xml
app/src/test/java/com/hereliesaz/graffitixr/: HelpItemsBuilderTest.kt  LayerIdTest.kt  MainViewModelTest.kt  OffscreenIndicatorAngleTest.kt  RailIdUniquenessTest.kt  TutorialAnchorTest.kt  TutorialIdsRegisteredTest.kt
core/native/src/main/cpp/: CMakeLists.txt  GraffitiJNI.cpp  MobileGS.cpp
core/native/src/main/cpp/include/: MobileGS.h
core/nativebridge/src/main/cpp/: CMakeLists.txt  DistortionHead.cpp  GraffitiJNI.cpp  ImageWarper.cpp  MobileGS.cpp  NativeBridge.cpp  SlamManager.cpp  StereoProcessor.cpp  StereoProcessor.h  SuperPointDetector.cpp  SurfaceMesh.cpp  SurfaceUnroller.cpp  VoxelHash.cpp  VulkanBackend.cpp
core/nativebridge/src/main/cpp/include/: ImageWarper.h  MobileGS.h  SlamEngine.h  SuperPointDetector.h  SurfaceMesh.h  SurfaceUnroller.h  VoxelHash.h  VulkanBackend.h
core/nativebridge/src/main/cpp/shaders/: splat.frag  splat.vert
vuforia/: CMakeLists.txt  build.gradle.kts
vuforia/cpp/: VuforiaWrapper.cpp
vuforia/samples/Android/: build.gradle
vuforia/samples/Android/app/: build.gradle
vuforia/samples/Android/app/src/main/: AndroidManifest.xml
vuforia/samples/Assets/ImageTargets/: StonesAndChips.xml
vuforia/samples/Assets/ModelTargets/: VuforiaMars_ModelTarget.xml
(+1208 files in other folders)
